Bug 476894 - Combobox used to choose the default browser includes libreoffice and video players
Summary: Combobox used to choose the default browser includes libreoffice and video pl...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: 5.27.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-12 20:14 UTC by Patrick Silva
Modified: 2024-01-25 19:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
screenshot (137.08 KB, image/png)
2023-11-12 20:14 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-11-12 20:14:13 UTC
Created attachment 163089 [details]
screenshot

STEPS TO REPRODUCE
1. open Default Applications KCM
2. open "Web browser" combobox
3. 

OBSERVED RESULT
"Web browser" combobox includes libreoffice and video players. Please see the attached screenshot.

EXPECTED RESULT
"Web browser" combobox only includes web browsers

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nicolas Fella 2023-11-12 21:13:11 UTC
These apps all have X-KDE-Protocols=http in their desktop file.

The behavior change probably came from https://invent.kde.org/plasma/plasma-desktop/-/commit/ee9334002d9b1155ca8c96ca30a45ba882f2019b
Comment 2 Nate Graham 2023-11-14 22:31:24 UTC
Can reproduce. This is a recent regression, I think. I don't recall the Web Browser list being populated with so many items just a few weeks ago.
Comment 3 Nate Graham 2024-01-17 23:58:59 UTC
Hmm, I wonder why they have that line in their config files. Turning on KIO support before KIO-FUSE existed, maybe?
Comment 4 Bug Janitor Service 2024-01-21 17:53:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1991
Comment 5 Nicolas Fella 2024-01-25 19:40:49 UTC
Git commit c864c24b6934b1201a579216dbaaaf4e68c4f691 by Nicolas Fella.
Committed on 25/01/2024 at 20:40.
Pushed by nicolasfella into branch 'master'.

[kcms/componentchooser] Only offer true scheme handlers

supportedProtocols() does not only include values from x-scheme-handler MIME types but also values from X-KDE-Protocols

There's a good amount of applications that have X-KDE-Protocols=http but aren't really web browsers, so it makes little sense to offer them as browsers

M  +1    -1    kcms/componentchooser/componentchooser.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/c864c24b6934b1201a579216dbaaaf4e68c4f691
Comment 6 Nicolas Fella 2024-01-25 19:42:09 UTC
Git commit 49228efcc6a2df80684927170301b09f050cf684 by Nicolas Fella.
Committed on 25/01/2024 at 20:41.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[kcms/componentchooser] Only offer true scheme handlers

supportedProtocols() does not only include values from x-scheme-handler MIME types but also values from X-KDE-Protocols

There's a good amount of applications that have X-KDE-Protocols=http but aren't really web browsers, so it makes little sense to offer them as browsers
(cherry picked from commit c864c24b6934b1201a579216dbaaaf4e68c4f691)

M  +1    -1    kcms/componentchooser/componentchooser.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/49228efcc6a2df80684927170301b09f050cf684