[kcms/componentchooser] Only offer true scheme handlers

supportedProtocols() does not only include values from x-scheme-handler MIME types but also values from X-KDE-Protocols

There's a good amount of applications that have X-KDE-Protocols=http but aren't really web browsers, so it makes little sense to offer them as browsers

BUG: 476894